# SMx

./: .gitignore  CMakeLists.txt  bigint.c  bigint.h  bitest.c  common.c  common.h  ectest.c  sm2.c  sm2.h  sm3.c  sm3.h  sm4.c  sm4.h  sm4_sbox.c  test.c
